--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "uuid": "^9.0.1",
-    "ejs": "^3.1.10"
+    "uuid": "^9.0.1"
   }
 }
